weather link added

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
                 <div class="portfolio-layer">
                     <h4>Weather Application</h4>
-                    <a href="" id="t-site"><i class='bx bx-link-external'></i></a>
+                    <a href="" id="w-site"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             
