added a class in form section

--- a/index.html
+++ b/index.html
@@ -195,20 +195,20 @@
 
         <form action="#" id="myForm" onsubmit="validateForm()">
             <div class="input-box">
-                <input type="text" placeholder="Full Name" id="i-name">
+                <input type="text" placeholder="Full Name" id="i-name" class="input">
                 <span id="name_error" class="error"></span>
                 <input type="email" placeholder="Email Address" id="i-email">
                 <span id="email_error" class="error"></span>
             </div>
             <div class="input-box">
-                <input placeholder="Mobile Number" id="i-number">
+                <input placeholder="Mobile Number" id="i-number" class="input">
                 <span id="number_error" class="error"></span>
             </div>
             <div class="input-box">
-                <input placeholder="Subject" id="i-subject">
+                <input placeholder="Subject" id="i-subject" class="input">
                 <span id="text_error" class="error"></span>
             </div>
-            <textarea name="" id="i-text" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <textarea name="" id="i-text" cols="30" rows="10" placeholder="Your Message" class="input"></textarea>
             <span id="text_error" class="error"></span>
             <button type="submit" class="btn" >Send Message </button>
         </form>
