--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="social-media">
                 <a href="" id="link"><i class='bx bxl-linkedin'></i></a>
                 <a href="" id="git"><i class='bx bxl-github'></i></a>
-                <a href="https://drive.google.com/file/d/1rIGHi5sgbuG2BfSEbXtdTUpFCNODK3ls/view?usp=drive_link"><i class='bx bxs-file-blank'></i></a>
+                <a href="https://drive.google.com/file/d/1mSztmLH-oSUfH2CSTFKR8CpEk-wgjlAU/view?usp=drive_link"><i class='bx bxs-file-blank'></i></a>
                 
             </div>
 
@@ -193,7 +193,7 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me!</span></h2>
 
-        <form action="#" id="myForm" onsubmit="validateForm()">
+        <form action="#" id="myForm">
             <div class="input-box">
                 <input type="text" placeholder="Full Name" id="i-name" class="input">
                 <span id="name_error" class="error"></span>
@@ -234,5 +234,5 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
- 
     <script src="p.js"></script>
+</body>
